book/tests/snapshots/snapshot__run_display_reference_prql@transforms__aggregate-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/aggregate-0.prql
---
from employees
aggregate [
  average salary,
  ct = count,
]



