book/tests/snapshots/snapshot__run_display_reference_prql@transforms__aggregate-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/aggregate-2.prql
---
from employees
derive [avg_sal = average salary]



