book/tests/snapshots/snapshot__run_display_reference_prql@transforms__append-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/append-2.prql
---
from employees_1
intersect employees_2



