book/tests/snapshots/snapshot__run_display_reference_prql@transforms__concat-and-union-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/concat-and-union-0.prql
---
from employees_1
concat employees_2



