book/tests/snapshots/snapshot__run_display_reference_prql@transforms__derive-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/derive-0.prql
---
from employees
derive gross_salary = salary + payroll_tax



