book/tests/snapshots/snapshot__run_display_reference_prql@transforms__filter-2.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/transforms/filter-2.prql
---
from employees
filter (
  age
  in 25..40
)



